--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         body {
-            background-image : url(/KakaoTalk_20230124_144524195.jpg);
+            background-image : url(./KakaoTalk_20230124_144524195.jpg);
             background-position: -400px -300px;
 
             color : white;
