--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background-image : url("./KakaoTalk_20230124_144524195.jpg");
             background-position: -400px -300px;
 
-            color : black;
+            color : white;
         }
 
         .time {
